Fix footer icon vertical-align

--- a/docs/assets/scss/_footer.scss
+++ b/docs/assets/scss/_footer.scss
@@ -12,6 +12,7 @@
 
   .icon {
     width: 16px;
+    vertical-align: text-bottom;
     stroke: $tm-red-color;
   }
 
